# write-hand

./: .cursorignore  .gitignore  CMakeLists.txt  CMakePresets.json  ColumnView.cpp  ColumnView.h  EditorWidget.cpp  EditorWidget.h  FileTreeWidget.cpp  FileTreeWidget.h  FontAwesome.cpp  FontAwesome.h  Info.plist.in  MainWindow.cpp  MainWindow.h  README.md  ThemeManager.cpp  ThemeManager.h  WelcomeWidget.cpp  WelcomeWidget.h  WriteHand.entitlements  dev.sh  main.cpp  resources.qrc  watch.sh
scripts/: generate_icons.sh
styles/: filetree.qss
